force-app/main/default/objects/BMCServiceDesk__Release__c/BMCServiceDesk__Release__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpRelease</customHelpPage>
    <description>This object allows you to store data for Release.</description>
    <label>Release</label>
    <nameField>
        <displayFormat>RM{00000000}</displayFormat>
        <label>Release #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>