force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__ActualDeploymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ActualDeploymentEndDate__c</fullName>
    <label>Actual Deployment End</label>
    <type>DateTime</type>
</CustomField>