force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__ActualDeploymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ActualDeploymentStartDate__c</fullName>
    <label>Actual Deployment Start</label>
    <type>DateTime</type>
</CustomField>