force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__ActualImplementationStartDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ActualImplementationStartDate__c</fullName>
    <label>Actual Implementation Start</label>
    <type>DateTime</type>
</CustomField>