force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Approved__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>