force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Business_Justification__c</fullName>
    <label>Business Justification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Strategic</fullName>
            </value>
            <value>
                <fullName>Business Unit Strategic</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Customer Commitment</fullName>
            </value>
            <value>
                <fullName>Sarbanes-Oxley</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>