force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Close_Comments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Close_Comments__c</fullName>
    <label>Close Comments</label>
    <type>TextArea</type>
</CustomField>