force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CloseDateTime__c</fullName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>