force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__ClosureCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
    <label>Closure Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Case Rejected</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Partially Implemented</fullName>
            </value>
            <value>
                <fullName>Rolled Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>