force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Comments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>