force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>