force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phased</fullName>
            </value>
            <value>
                <fullName>Non-phased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>