force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>