force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__DueDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DueDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>