force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__EndDeploymentDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EndDeploymentDate__c</fullName>
    <label>End Deployment</label>
    <type>DateTime</type>
</CustomField>