force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__EndImplementationDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EndImplementationDate__c</fullName>
    <label>End Implementation</label>
    <type>DateTime</type>
</CustomField>