force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__FKImpact__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKImpact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the release&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the release.</inlineHelpText>
    <label>Impact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active impact</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>