force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__FKPriority__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKPriority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
    <label>Priority</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active priority</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>