force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__FKStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the appropriate status for the release. Status is used to display the progress of an release through its stages of opening to closure.</inlineHelpText>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToRelease__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Status__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>