force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__FKTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the template that you want to apply to the record. Templates enable you to prepopulate commonly used fields on a form.</inlineHelpText>
    <label>Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
            <operation>equals</operation>
            <value>Release</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__systemTemplate__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active template for the release.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>