force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__FKUrgency__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUrgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select how quickly the release needs to be resolved. The urgency and the level of impact are used to calculate the priority of the release.</inlineHelpText>
    <label>Urgency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active urgency</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>