force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if the release record is no longer valid, but the record has to be retained for compliance with the records retention policy. For example, if a client has left the account, all the client&apos;s release records would be invalid.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>