force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__OpenDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OpenDateTime__c</fullName>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>