force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Queue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Queue__c</fullName>
    <description>Queue to which the record is assigned.</description>
    <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue</label>
    <type>Text</type>
</CustomField>