force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__queueName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__queueName__c</fullName>
    <inlineHelpText>Displays the name of the queue to which the release was last assigned.</inlineHelpText>
    <label>Last Queue</label>
    <length>40</length>
    <type>Text</type>
</CustomField>