force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Release_Failed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Release_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is selected if the release has failed.</description>
    <label>Release Failed</label>
    <type>Checkbox</type>
</CustomField>