force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Release_Subtype__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Release_Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>