force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Release_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Release_Type__c</fullName>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>