force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Required_CIs_Available__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Required_CIs_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required CIs Available</label>
    <type>Checkbox</type>
</CustomField>