force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__Required_Contracts_Verified__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Required_Contracts_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Contracts Verified</label>
    <type>Checkbox</type>
</CustomField>