force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__RF_HasAttachments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_HasAttachments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Specifies whether a record has an attachment or not. A positive value in this field implies that the record has attachments.</description>
    <label>Has Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>