force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__shortDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__shortDescription__c</fullName>
    <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>