force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__StartDeploymentDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StartDeploymentDate__c</fullName>
    <label>Start Deployment</label>
    <type>DateTime</type>
</CustomField>