force-app/main/default/objects/BMCServiceDesk__Release__c/fields/BMCServiceDesk__State__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__State__c</fullName>
    <defaultValue>true</defaultValue>
    <label>State Open</label>
    <type>Checkbox</type>
</CustomField>