force-app/main/default/objects/BMCServiceDesk__Release__c/validationRules/BMCServiceDesk__ActualDeploymentDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__ActualDeploymentDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__ActualDeploymentEndDate__c),ISBLANK(BMCServiceDesk__ActualDeploymentEndDate__c) ) ), BMCServiceDesk__ActualDeploymentEndDate__c &lt; BMCServiceDesk__ActualDeploymentStartDate__c )</errorConditionFormula>
    <errorMessage>Actual Deployment End Date must be later than the Actual Deployment Start Date.</errorMessage>
</ValidationRule>