force-app/main/default/objects/BMCServiceDesk__Release__c/validationRules/BMCServiceDesk__ActualImplementationDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__ActualImplementationDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__ActualImplementationEndDate__c),ISBLANK(BMCServiceDesk__ActualImplementationEndDate__c) ) ), BMCServiceDesk__ActualImplementationEndDate__c &lt; BMCServiceDesk__ActualImplementationStartDate__c )</errorConditionFormula>
    <errorMessage>Actual Implementation End Date must be later than the Actual Implementation Start Date.</errorMessage>
</ValidationRule>