force-app/main/default/objects/BMCServiceDesk__Release__c/validationRules/BMCServiceDesk__Cannot_Update_Closed_Release.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Cannot_Update_Closed_Release</fullName>
    <active>true</active>
    <description>This Rule does not allow user to modify record, if it is closed.</description>
    <errorConditionFormula>AND( NOT(ISCHANGED(BMCServiceDesk__RF_HasAttachments__c)), NOT( BMCServiceDesk__State__c ) , NOT(PRIORVALUE( BMCServiceDesk__State__c ) ), NOT( ISNEW() ))</errorConditionFormula>
    <errorMessage>This release is closed. Reopen the release to modify it.</errorMessage>
</ValidationRule>