force-app/main/default/objects/BMCServiceDesk__Release__c/validationRules/BMCServiceDesk__DeploymentDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__DeploymentDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__EndDeploymentDate__c),ISBLANK(BMCServiceDesk__EndDeploymentDate__c) ) ), BMCServiceDesk__EndDeploymentDate__c &lt; BMCServiceDesk__StartDeploymentDate__c )</errorConditionFormula>
    <errorMessage>End Deployment Date must be later than the Start Deployment Date.</errorMessage>
</ValidationRule>