force-app/main/default/objects/BMCServiceDesk__Release__c/validationRules/BMCServiceDesk__ImplementationDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__ImplementationDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__EndImplementationDate__c),ISBLANK(BMCServiceDesk__EndImplementationDate__c) ) ), BMCServiceDesk__EndImplementationDate__c &lt; BMCServiceDesk__StartImplementationDate__c )</errorConditionFormula>
    <errorMessage>End Implementation Date must be later than the Start Implementation Date.</errorMessage>
</ValidationRule>