force-app/main/default/objects/BMCServiceDesk__Release__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__FKPriority__c</columns>
    <columns>BMCServiceDesk__Description__c</columns>
    <columns>BMCServiceDesk__Release_Type__c</columns>
    <columns>BMCServiceDesk__Release_Subtype__c</columns>
    <columns>BMCServiceDesk__FKStatus__c</columns>
    <columns>BMCServiceDesk__FKReleaseCoordinator__c</columns>
    <columns>BMCServiceDesk__OpenDateTime__c</columns>
    <columns>BMCServiceDesk__DueDate__c</columns>
    <columns>BMCServiceDesk__CloseDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>